.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Commit__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Branch</label>
        <referenceTo>Flosum__Branch__c</referenceTo>
        <relationshipLabel>Commits</relationshipLabel>
        <relationshipName>Commits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Commit_Name__c</fullName>
        <label>Commit Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Description__c</fullName>
        <label>Commit Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repository</label>
        <referenceTo>Flosum__Repository__c</referenceTo>
        <relationshipLabel>Commits</relationshipLabel>
        <relationshipName>Commits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Commit</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>NAME</columns>
        <columns>Flosum__Commit_Name__c</columns>
        <columns>Flosum__Description__c</columns>
        <columns>Flosum__Branch__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Commit-{YY}-{MM}-{DD}-{00000}</displayFormat>
        <label>Commit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>